# synthetic_iris_dcgan

./: .gitignore  LICENSE  README.md  README_tr.md  attack_elimination.ipynb  attack_experiments.ipynb  pad_elimination.ipynb  pad_experiments.ipynb  prep.ipynb  prepare_dataset.ipynb  pyproject.toml  report.ipynb  requirements.txt  training.ipynb  verieye.ipynb
pad/: detector.py
