[tool.poetry]
name = "synthetic_iris_dcgan"
version = "0.1.0"
description = ""
authors = ["Kaan Akdeniz <kaanakdenz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
pandas = "^2.0.3"
numpy = "^1.25.0"
scipy = "^1.11.1"
ipykernel = "^6.24.0"
pillow = "^10.0.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
opencv-python = "^4.8.0.74"
tensorflow = {version = "^2.12.0"}
tensorflow-macos = {version = "^2.12.0", platform = "darwin"}
tensorflow-metal = {version = "^1.0.1", platform = "darwin"}
torch = "^2.0.1"
torchvision = "^0.15.2"
shapely = "^2.0.1"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
